--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
 
 <body>
 
-<div class="top-header">
-    <div class="div">
+
+    <div class="top-header">
         <p><i class="fas fa-phone me-2"></i> + 353 83 084 7748</p>
         <p><i class="fas fa-envelope me-2"></i>reservations@platinumlimo.ie </p>
     </div>
-</div>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container-fluid px-3">
             <a class="navbar-brand" href="index.html"><img src="assets/images/navbar-logo.svg" width="100%"
                     height="100%" alt="Platinum Limo logo"></a>
