--- a/special-occasions.html
+++ b/special-occasions.html
@@ -12,8 +12,7 @@
     <title>Platinum Limo - Chauffeur Services</title>
 
     <!-- Google Fonts -->
-    <link link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Lato&display=swap">
+    <link link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Spectral:wght@300&display=swap">
 
     <link href="assets/style.css" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -67,7 +66,7 @@
     <!-- Header image -->
     <header class="header-services occasions-header">
         <div class="container">
-            <div class="heading text-uppercase">Special Occasions</div>
+            <div class="heading">Special Occasions</div>
 
         </div>
     </header>
@@ -87,15 +86,24 @@
                         experts at Platinum Limo, for more information or to get a quotation, please fill out the form.
                     </div>
 
-                    <div class="mt-4">
+                    <div class="mt-4 services-checklist">
                         <div>
                             <i class="fa fas fa-check mt-2"></i>
-                            <p class="d-inline pl-2">SUPERIOR SERVICE FOR ANY SIZE EVENT</p>
+                            <span>
+
+                                <p class="pl-2">SUPERIOR SERVICE FOR ANY SIZE EVENT</p>
+                            </span>
                         </div>
 
                         <div>
-                            <i class="fa fas fa-check mt-3"></i>
-                            <p class="d-inline pl-2">LUXURY, MEETS COMFORT, WITH OUR VEHICLES TAILORED TO ALL NEEDS</p>
+                            <div>
+
+                                <i class="fa fas fa-check mt-3"></i>
+                            </div>
+                            <div>
+
+                                <p class="pl-2">LUXURY, MEETS COMFORT, WITH OUR VEHICLES TAILORED TO ALL NEEDS</p>
+                            </div>
                         </div>
 
                         <div>
