--- a/index.html
+++ b/index.html
@@ -398,16 +398,11 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselTestimonials"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselTestimonials"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselTestimonials" data-bs-slide-to="0" class="active" aria-current="true"></button>
+                            <button type="button" data-bs-target="#carouselTestimonials" data-bs-slide-to="1"></button>
+                            <button type="button" data-bs-target="#carouselTestimonials" data-bs-slide-to="2" ></button>
+                          </div>
                     </div>
                     <!-- Carousel wrapper end -->
                 </div>
